docs: fix navbar not showing on small screens

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -342,6 +342,10 @@ ul:hover {
   margin-right: auto;
 } */
 
+.navbar-sidebar--show {
+  backdrop-filter: none !important;
+}
+
 @media screen and (max-width: 996px) {
   :root {
     --ifm-font-size-base: 18px;
